@@ -1,5 +1,7 @@
 2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
 
+	* Makefile.am: Clean up
+
 	* default-application-properties.c (main): Call gtk_main, not
 	capplet_gtk_main
 
